--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: Dr.Xamã
+description: Central de Trabalho.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
