--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,3 +3,5 @@ description: Todos meus trabalhos para o RPG MAKER MV.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
+others:
+  folder_plugins_link: https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GS-GAME-WORDS/Dr.Xama---RPG-MAKER-MV/tree/master/plugins
